infrastructure/AKSConfig/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    admission-webhook: enabled
  name: application
