infrastructure/AKSConfig/service.yml
apiVersion: v1
kind: Service
metadata:
  name: admission-webhook-service
  namespace: default
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: admission-webhook
