infrastructure/AKSConfig/mutatingAdmissionWebhookConfiguration.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
 name: " custom-admission-webhook"
webhooks:
 - name: "custom-admission-webhook"
  #  namespaceSelector:
  #    matchLabels:
  #      admission-webhook: enabled
   rules:
     - apiGroups: [""]
       apiVersions: ["v1"]
       operations: ["CREATE"]
       resources: ["pods"]
       scope: "*"
   clientConfig:
     service:
       namespace: default
       name: admission-webhook-service
       path: /validate-pods
       port: 443
     caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMzREND...
